<resources>
    <string name="app_name">Timer 4 kids</string>
    <!-- Login -->
    <string name="activity_login_enter_access_code">Enter Access Code</string>
    <string name="activity_login">Login</string>
    <string name="activity_login_save_user_num">Save</string>
    <string name="activity_login_error">Error logging in, check your pin and try again.</string>
    <string name="activity_login_no_pin">You must type in a Pin #</string>
    <string name="activity_login_delete">Delete</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>



    <string name="hint1">Enter Your Name (Max 8 characters)</string>
    <string name="deletekeypad">Delete</string>
    <string name="fiveminaviso">ONLY 5 MINUTES LEFT!!!</string>
    <string name="emergencyaviso">USED EMERGENCY CODE,YOU HAVE 10  EXTRA MINUTES (TO UNISTALL APP IF YOU DO NOT LIKE IT)YOU WILL NOT HAVE ANY OTHER CHANCE TILL TOMORROW!!!</string>
    <string name="waitoneminuteaviso">WAIT 1 MINUTE TO ENTER A NEW CODE!!!</string>
    <string name="activaadministrator">THIS APLICATION NEED DEVICE ADMINISTRATOR PERMISSION FOR:\n*LOCKSCREEN WHEN MISTAKE 3 TIMES THE EXTRA TIME CODE\n*DISABLE FORCE STOP/EASY UNISTALL TO THE KID</string>
    <string name="cambiohoraaviso">DUE TO CHANGE TIME CHEAT....YOUR KIDS TIMER WILL NOT INCREASE TODAY TIME...XD(POR LISTO)</string>
    <string name="anucionolisto">PLEASE WAIT TILL ADD IS LOADED(CHECK INTERNET CONNECTION)</string>
    <string name="anuncioyavistoten5min">GOOD!! YOU GET EXTRA 5 MINUTES</string>
    <string name="yallevas2anuncios">SORRY NO MORE ADS TILL TOMORROW</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_inferior_ad_unit_id">ca-app-pub-6700746515260621/3981955390</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6700746515260621/1946818994</string>



    <string name="helpads">Watch add to get 5 extra minutes(click the plus button--maximum 2 times at day)</string>

    <string name="urgenciayausado">ALREADY USED..WAIT TILL TOMORROW</string>


</resources>
