<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.6"

        />




    <TextView
        android:id="@+id/preguntaMultiplicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ENTER SECRET CODE"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:tag="Medium"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/login_text_button_layout"
        android:layout_below="@id/preguntaMultiplicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/activity_login_access_code_value"
            android:background="@drawable/login_pad_edit_text"
            android:textColor="@android:color/holo_blue_light"
            android:layout_width="145dp"
            android:layout_height="54dp"
            android:gravity="center"
            android:inputType="number"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:maxLength="4"
            />



    </RelativeLayout>


    <TableLayout
        android:id="@+id/activity_login_pad_table_layout"
        android:gravity="center"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/one_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/one"
                android:tag="Thin" />

            <TextView
                android:id="@+id/two_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/two"
                android:tag="Thin"/>

            <TextView
                android:id="@+id/three_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/three"
                android:tag="Thin"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/eight_dp"
            android:gravity="center">

            <TextView
                android:id="@+id/four_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/four"
                android:tag="Thin"/>

            <TextView
                android:id="@+id/five_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/five"
                android:tag="Thin"/>

            <TextView
                android:id="@+id/six_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/six"
                android:tag="Thin"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/eight_dp"
            android:gravity="center">

            <TextView
                android:id="@+id/seven_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/seven"
                android:tag="Thin"/>

            <TextView
                android:id="@+id/eight_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/eight"
                android:tag="Thin"/>

            <TextView
                android:id="@+id/nine_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/nine"
                android:tag="Thin"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/eight_dp"
            android:gravity="center"
            android:id="@+id/lastfila">
            <ImageButton
                android:id="@+id/nousao"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_plus"
                android:onClick="AnuncioPulsado"
                android:tag="Thin"
                android:scaleType="fitCenter"
                 />

            <TextView
                android:id="@+id/zero_button"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"
                android:background="@drawable/login_pad_circle"
                android:textSize="@dimen/thirty_two_sp"
                android:textColor="@android:color/white"
                android:text="@string/zero"
                android:tag="Thin"/>
            <TextView
                android:id="@+id/activity_login_access_code_delete"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:gravity="center"
                android:paddingBottom="@dimen/two_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginRight="@dimen/eight_dp"

                android:textSize="@dimen/thirteen_dp"
                android:textColor="@android:color/white"
                android:text="@string/deletekeypad"
                android:tag="Thin"/>



        </TableRow>

        <TextView
            android:id="@+id/info0kidname"
            android:layout_below="@+id/lastfila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpads"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:tag="Medium"
            android:gravity="bottom"
            android:padding="10dp"

            />
        <TextView
            android:id="@+id/info1kidname"
            android:layout_below="@+id/lastfila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KIDSTIMER GENERATOR/REMOTE  NAME: papi1234"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:tag="Medium"
            android:gravity="bottom"
            android:padding="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/info2kidpass"
            android:layout_below="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KIDSTIMER REMOTE  PASSWORD: 1234567890"
            android:textColor="@android:color/holo_green_light"
            android:textSize="17dp"
            android:tag="Medium"
            android:gravity="bottom"
            android:padding="10dp"
            android:visibility="gone"
            />

    </TableLayout>



    <com.google.android.gms.ads.AdView
        android:id="@+id/av_bottom_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_inferior_ad_unit_id" />



</RelativeLayout>
